# autoresearch

./: .coveragerc  .cursorignore  .env.example  .env.offline  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_COMPLETE_PLAN.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  DEVELOPMENT_PLAN.md  Dockerfile  IMPLEMENTATION_NOTES.md  MANIFEST.in  OPTIONAL_EXTRAS.md  README.md  ROADMAP.md  SPEC_COVERAGE.md  STATUS.md  STREAMLIT_TEST_FIXES_SUMMARY.md  TASK_PROGRESS.md  TEST_SUITE_FIX_COMPLETION_SUMMARY.md  Taskfile.yml  V0.1.0A1_REMEDIATION_PLAN.md  ai_code_review_report.md  autoresearch.toml  coverage.json  coverage.xml  docker-compose.yml  fix_assertions.py  flake8_baseline.txt  mkdocs.yml  mypy_baseline.txt  pyproject.toml  pytest.ini  sitecustomize.py  test_collection_baseline.txt  test_openrouter_integration.py  (+1 more)
.cursor/: INDEX.md  SETUP_COMPLETE.md
.cursor/rules/: 00-project-overview.mdc  01-python-style.mdc  02-testing.mdc  03-architecture.mdc  04-documentation.mdc  05-git-workflow.mdc  06-dependencies.mdc  07-ai-assistance.mdc  08-performance.mdc  09-security.mdc  10-project-vitals.mdc  README.md
.cursor/workflows/: README.md  ai-patterns.md  quick-reference.md
.github/: AGENTS.md  pull_request_template.md
.github/workflows/: ci.yml  ranking-benchmark.yml  release-images.yml
.github/workflows.disabled/: ci.yml  simple_ci.yml  wheels.yml
STATUS/: TASK_PROGRESS.md
baseline/: README.md  coverage.xml
baseline/archive/: 2025-09-08.xml  2025-09-22.xml  2025-09-23.xml
baseline/evaluation/: metrics_schema.csv  orchestrator_distributed_sim.json  scheduler_benchmark.json  truthfulness.duckdb  truthfulqa-20251010T183642Z-e9a86d64_examples_20251010T183649Z.csv  truthfulqa-20251010T183642Z-e9a86d64_examples_20251010T183649Z.parquet  truthfulqa-20251010T183642Z-e9a86d64_summary_20251010T183649Z.csv  truthfulqa-20251010T183642Z-e9a86d64_summary_20251010T183649Z.parquet
baseline/logs/: README.md  llm_baseline_20251016T112447Z.json  publish-dev-20251009T215824Z.sha256  (+13 more)
docker/: Dockerfile  Dockerfile.dev  Dockerfile.linux  Dockerfile.macos  Dockerfile.runtime  Dockerfile.windows  README.md  build.sh  build_images.sh
docs/: AGENTS.md  COVERAGE_BASELINE.md  SECURITY.md  a2a_mcp_integration.md  advanced_usage.md  agent_communication.md  agent_system.md  agents.md  api.md  api_authentication.md  caching.md  cli_helpers.md  component_interactions.md  config.md  configuration.md  container_usage.md  contributing.md  cursor-integration-gaps-analysis.md  custom_ui_extensions.md  deep_research_upgrade_plan.md  deploy_validation.md  deployment.md  developer_guide.md  development.md  distributed.md  domain_model.md  duckdb_compatibility.md  duckdb_vss_fallback.md  faq.md  getting_started.md  installation.md  introduction_to_autoresearch.md  knowledge_graph.md  message_brokers.md  monitor.md  monitoring.md  multiprocessing_resource_tracker.md  orchestration.md  orchestrator_perf.md  orchestrator_state.md  (+40 more)
duckdb/: __init__.py
examples/: .env.example  AGENTS.md  autoresearch.lmstudio.test.toml  autoresearch.minimal.lmstudio_serper.toml  autoresearch.openrouter.free.toml  autoresearch.temp_test.toml  autoresearch.toml  output_format_simulation.py  search_evaluation.csv
extensions/: AGENTS.md
issues/: 0001-complete-cross-component-integration-tests.md  0002-test-orchestrator-with-all-agent-combinations.md  0003-verify-storage-integration-with-search-functionality.md  0004-test-configuration-hot-reload-with-all-components.md  0005-add-performance-tests.md  0006-implement-benchmarks-for-query-processing-time.md  0007-test-memory-usage-under-various-conditions.md  0008-verify-token-usage-optimization.md  0009-monitor-token-usage-regressions-automatically.md  0010-complete-bdd-test-scenarios.md  0011-add-scenarios-for-all-user-facing-features.md  0012-test-all-reasoning-modes-with-realistic-queries.md  0013-verify-error-handling-and-recovery.md  0014-enhance-test-step-definitions.md  0015-add-more-detailed-assertions.md  0016-implement-better-test-isolation.md  0017-create-more-comprehensive-test-contexts.md  0018-address-slow-unit-test-execution.md  0019-add-freezegun-dependency.md  0020-remove-unused-asyncio-import.md  0022-investigate-mypy-hang.md  0023-unit-test-hang.md  0024-vss-extension-setup.md  0025-smoke-test-import-cost.md  0026-monitor-cli-callback-failure.md  0027-orchestrator-instance-cb-manager.md  0028-unit-tests-after-orchestrator-refactor.md  AGENTS.md  README.md  TRIAGE_v0.1.0.md  adaptive-gate-and-claim-audit-rollout.md  add-a2a-concurrency-proofs-and-simulations.md  add-api-authentication-proofs.md  add-autoresearch-package-spec.md  add-behavior-driven-test-coverage.md  add-coverage-gates-and-regression-checks.md  add-distributed-coordination-proofs-and-benchmarks.md  add-git-package-spec.md  add-kg-reasoning-specification.md  add-main-entrypoint-spec.md  (+210 more)
scripts/: AGENTS.md  a2a_concurrency_sim.py  agents_sim.py  ai_code_review.py  ai_test_assistant.py  annotate_tests.py  api_auth_credentials_sim.py  api_auth_sim.py  api_auth_simulation.py  api_auth_verification_sim.py  api_stream_order_sim.py  archive_task_coverage_minimal.py  avg_timing_simulation.py  benchmark_token_memory.py  bootstrap.sh  build_images.sh  bump_version.py  check_coverage_docs.py  check_env.py  check_full_verify_prereqs.py  check_release_metadata.py  check_spec_tests.py  check_spec_updated.py  check_token_regression.py  codex_maintenance.sh  codex_setup.sh  codex_web_common.sh  comprehensive_release_validation.py  config_hot_reload_sim.py  deploy.py  dialectical_coordination_demo.py  distributed_coordination_benchmark.py  distributed_coordination_formulas.py  distributed_coordination_sim.py  distributed_orchestrator_perf_benchmark.py  distributed_orchestrator_sim.py  distributed_perf_compare.py  distributed_perf_sim.py  distributed_recovery_benchmark.py  distributed_sim.py  (+65 more)
src/: AGENTS.md
tests/: AGENTS.md  README.md  conftest.py  conftest.pyi  optional_imports.py  test_dependency_versions.py  typing_helpers.py
typings/: rank_bm25.pyi
wheels/: .gitignore
(+1796 files in other folders)
